<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/movies_name_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/movie_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/movie_name" />

        <TextView
            android:id="@+id/movies_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/movies_name_title_text"
            app:layout_constraintStart_toEndOf="@+id/movies_name_title_text"
            app:layout_constraintTop_toTopOf="@+id/movies_name_title_text"
            tools:text="Harry Potter" />


        <TextView
            android:id="@+id/movie_year_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/release_year"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movies_name_title_text"
            tools:text="@string/release_year" />

        <TextView
            android:id="@+id/movie_year_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/movie_year_title_text"
            app:layout_constraintStart_toEndOf="@+id/movie_year_title_text"
            app:layout_constraintTop_toBottomOf="@+id/movies_name_text"
            app:layout_constraintVertical_bias="1.0"
            tools:text="2020" />

        <TextView
            android:id="@+id/movie_genres_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_genres"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_year_title_text"
            tools:text="@string/movie_genres" />

        <TextView
            android:id="@+id/movie_genres_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@+id/movie_genres_title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_genres_title_text"
            app:layout_constraintTop_toBottomOf="@+id/movie_year_text"
            tools:text="Drama" />

        <TextView
            android:id="@+id/movie_cast_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_cast"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_genres_title_text"
            tools:text="@string/movie_cast" />

        <TextView
            android:id="@+id/movie_cast_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/movie_cast_title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/movie_cast_title_text"
            app:layout_constraintTop_toTopOf="@+id/movie_cast_title_text"
            tools:text="Jason Stetham" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photos_recycler"
            style="@style/AppTheme.ScrollbarStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:paddingTop="16dp"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_cast_text" />

        <TextView
            android:id="@+id/error_text"
            android:text="@string/no_data"
            android:visibility="gone"
            android:gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_cast_title_text"
            />

        <LinearLayout
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:paddingTop="16dp"
            android:alpha="0.7"
            android:background="@color/white"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_cast_title_text">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>